<?xml version="1.0"?>
<package>
  <name>tb3_om_joy</name>
  <version>0.1.3</version>
  <description>Generic joystick teleop for twist robots.</description>
  <maintainer email="timo.pihlstrom@iki.fi">Timo Pihlstrom</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
